--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,37 +1,21 @@
 
+
+* {
+  box-sizing: border-box;
+}
+
 html {
-    font-size: 14px;
+  font-size: 14px;
 }
 
-
- body {
- 	margin: 0;
-  background-color: aliceblue;
- 	color: black;
- 	transition: background-color 0.2s ease;
- 	font-family: 'Gotham Rounded SSm A', 'Gotham Rounded SSm B';
- 	font-weight: 400;
- 	font-style: normal;
- 	text-align: left;
- }
-
-/***************
-Fun hr line
-**************/
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
 
 h1 {
 	color: black;
 	font: 3.2rem/1.10 clarendonLight, Georgia;
+  /*
 	letter-spacing: 0;
   margin: 1em 0;
+  */
 }
 
 h2 {
@@ -40,6 +24,7 @@ h2 {
 	letter-spacing: 0;
   margin: 1em 0;
 }
+
 
 h3 {
 	font-family: 'Gotham Rounded SSm A';
@@ -51,42 +36,102 @@ h3 {
 	font-weight: 400;
 }
 
-h4 {
-	color: black;
-	font-size: 1.35rem;
-	line-height:1.6rem;
-	letter-spacing: 0;
-  margin: .5em;
-	font-weight: 400;
+
+ body {
+   display:flex;
+   width: 100%;
+   height: 100%;
+   flex-direction:column;
+   /*
+  background-color: aliceblue;
+ 	color: black;
+ 	transition: background-color 0.2s ease;
+ 	font-family: 'Gotham Rounded SSm A', 'Gotham Rounded SSm B';
+ 	font-weight: 400;
+ 	font-style: normal;
+ 	text-align: left;
+
+  height: 1200px;
+  font-size: 18px;
+  font-family: sans-serif;
+  color: #5D6063;
+  */
+  margin: 0;
+ }
+
+
+.header {
+  padding-left:50px;
+  color: black;
+
 
 }
 
+
 p {
+  /*
 	margin: 0;
 	font-weight: 300;
 	line-height: 1.6rem;
+  */
+}
+.title
+{
+  color: black;
+	font: 2.4rem/1.10 clarendonLight, Georgia;
+	letter-spacing: 0;
+  margin: 1em 0;
+
 }
 
-a {
-	text-decoration: none;
-	color: blue;
-  font-size: 1.35rem;
+a:link,
+a:visited {
+  color: #5D6063;
+  text-decoration: none;
 }
 a:hover {
-	color: green;
-
+  text-decoration: underline;
 }
 
+.menu {
+  margin-top: 40px;
+}
 
+.menu > li {
+  display: inline;
+  margin-right: 50px;
+}
+
+.header {
+  display: flex;
+  position: relative;
+
+  justify-content: space-between;
+
+  width: 100%;
+  padding: 50px;
+  background: #D6E9FE;
+}
+.container {
+  padding: 50px;
+}
 section {
+  /*
+  padding-left:50px;
+  padding-right:50px;
 	padding-bottom: 135px;
 	width: 100%;
 	position: relative;
 	float: left;
 	margin-bottom: 1rem;
+  */
+  padding-left: 50px;
+  padding: 0.5rem;
+  box-sizing: border-box;
 }
 
 footer {
+  padding-left: 50px;
   color: black;
   font-size: 1.35rem;
   line-height:1.6rem;
