--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -49,7 +49,11 @@ fieldset input {
   font: bold 15px arial, sans-serif;
   text-shadow:none;
 }
-
+.linkfont {
+  font: clarendonLight, Georgia;
+  padding:15px;
+  font-size: 20px;
+}
 h1 {
   	font: 3.2rem/1.10 clarendonLight, Georgia;
   	letter-spacing: 0;
